# Inkscape-pp-plugin

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
install/: Install-Windows.ps1  install-windows.bat  uninstall-windows.bat
src/pp/: pp_align.inx  pp_align.py  pp_animate.inx  pp_animate.py  pp_content.inx  pp_content.py  pp_export_html.inx  pp_export_html.py  pp_export_js.inx  pp_export_js.py  pp_export_pdf.inx  pp_export_pdf.py  pp_export_pptx.inx  pp_export_pptx.py  pp_fields_update.inx  pp_fields_update.py  pp_import_master.inx  pp_import_master.py  pp_import_pptx.inx  pp_import_pptx.py  pp_margins.inx  pp_margins.py  pp_master_apply.inx  pp_master_apply.py  pp_master_edit.inx  pp_master_edit.py  pp_notes.inx  pp_notes.py  pp_outline.inx  pp_outline.py  pp_panel.inx  pp_panel.py  pp_preview.inx  pp_preview.py  pp_q_badges.inx  pp_q_badges.py  pp_q_delete.inx  pp_q_delete.py  pp_q_duplicate.inx  pp_q_duplicate.py  (+30 more)
src/pp/assets/: content.js  player.css  player.js
src/pp/data/: layouts.json
src/pp/pplib/: __init__.py  align.py  anim.py  constants.py  document.py  fields.py  fonts.py  htmlexport.py  jsexport.py  layouts.py  model.py  (+17 more)
tests/: conftest.py  test_align.py  test_anim.py  test_fields.py  test_htmlexport.py  test_integration.py  test_jsexport.py  test_layouts.py  test_margins.py  test_master_edit.py  test_masterfromslide.py  test_mastersimport.py  test_notes.py  test_outline.py  test_pages.py  test_panel_actions.py  test_pptxexport.py  test_pptximport.py  test_render.py  test_template.py  test_webcontent.py
(+1 files in other folders)
