[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "inkscape-pp-plugin"
version = "0.1.0"
description = "PowerPoint-like presentation authoring extensions for Inkscape 1.2+."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-2.0-or-later" }
authors = [{ name = "Inkscape PP Plugin contributors" }]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]
